Fix align text in groups

--- a/docroot/themes/custom/ample/scss/base/_base.scss
+++ b/docroot/themes/custom/ample/scss/base/_base.scss
@@ -222,6 +222,12 @@ svg {
   }
 }
 
+.group {
+  .summary-text {
+    text-align: left;
+  }
+}
+
 //------------------------------------------------------------------------------
 // Keyframes
 @keyframes blink {
